# coup-submission-helper

./: README.md  pyproject.toml
submission_helper/: bot_battle.py  enums.py  state.py
